# pcl_segmentation_test

./: .gitignore  README.md  camera.yml  default.xml  exclude.txt  sync.py  sync.sh
src/gui/dcalibrator/: CMakeLists.txt  package.xml
src/gui/dcalibrator/launch/: dvisualize.launch
src/gui/dcalibrator/src/: clabel.cpp  clabel.hpp  mainwindow.hpp  mainwindow.ui  mymodel.cpp  mymodel.hpp  undist.cpp  undist.hpp  undist.ui
src/gui/dmonitor/: CMakeLists.txt  README.md  package.xml
src/gui/dmonitor/include/dmonitor/: ball.hpp  baseObject.hpp  field.hpp  fieldgeometry.hpp  guiImage.hpp  robot.hpp  utils.hpp  viewRange.hpp
src/gui/dmonitor/launch/: dmonitor.launch
src/gui/dmonitor/src/: ball.cpp  baseObject.cpp  field.cpp  guiImage.cpp  main.cpp  main.qml  qml.qrc  robot.cpp  viewRange.cpp
src/gui/dmonitor/src/js/: componentCreation.js
src/gui/dmonitor/src/qml/: Ball.qml  Box.qml  Robot.qml  Selection.qml  ViewRange.qml  main.qml
src/robot/dbehavior/: CMakeLists.txt  README.md  dbehavior.py  demomain.py  djoy.py  getImg.py  package.xml
src/robot/dbehavior/launch/: behavior.launch  dbehavior.launch  dbehavior_neo.launch  demomain.launch  djoy.launch  getImg.launch  get_img.launch
src/robot/dbehavior/msg/: BehaviorInfo.msg  BehaviourShareData.msg  TeamInfo.msg
src/robot/dbehavior/script/: imuReadData.py
src/robot/dbehavior/scripts/: main.py
src/robot/dbehavior/scripts/blackboard/: blackboard.py  config_bb.py  motion_bb.py  status_bb.py  vision_bb.py
src/robot/dbehavior/scripts/misc/: gglobal.py  init_path.py  team.py  world.py
src/robot/dbehavior/src/: Blackboard.py  Log.py  Parameters.py  Timer.py  main.py  zjudancer.py
src/robot/dbehavior/src/demo/: DemoMain.py  GetImage.py  WalkAround.py
src/robot/dbehavior/src/headskills/: TrackBall.py
src/robot/dbehavior/src/utils/: actioncommand.py
src/robot/dlaunch/: CMakeLists.txt  drosconsole.conf  package.xml
src/robot/dlaunch/launch/: debug.launch  demomain.launch  game.launch  getImg.launch  get_img.launch  joy.launch  mv.launch  sim.launch
src/robot/dlib/darknetcxx/: CMakeLists.txt  package.xml
src/robot/dlib/darknetcxx/cfg/: rob.data  tiny-yolo-v1-rob.cfg  tiny-yolo-v1-voc.cfg  voc.data
src/robot/dlib/darknetcxx/src/: darknet.cpp  detector.cpp
src/robot/dlib/dprocess/: CMakeLists.txt  package.xml
src/robot/dlib/dprocess/src/: dconcurrent.cpp
src/robot/dlib/dprocess/test/: test_dconcurrent.cpp  test_dprocess.cpp
src/robot/dlib/dtransmit/: CMakeLists.txt  README.md  package.xml
src/robot/dlib/dtransmit/src/: dtransmit.cpp
src/robot/dlib/dtransmit/test/: test_dtransmit.cpp  test_recv.cpp  test_send.cpp
src/robot/dlib/ros_h264_streamer/: CMakeLists.txt
src/robot/dlib/ros_h264_streamer/test/: testEncoderDecoder.cpp
src/robot/dmotion/: CMakeLists.txt  package.xml
src/robot/dmotion/config/: kick.yml  motion.yml  motor.yml
src/robot/dmotion/include/dmotion/: BehaviorRecv.hpp  GaitStateManager.hpp  GaitStateType.hpp  MotionData.hpp  MotionShareData.hpp  One_D_Filter.hpp  RobotStatus.hpp  VecPos.hpp  dmotion.hpp  fast_math.hpp  motion.hpp  transitHub.hpp
src/robot/dmotion/launch/: dmotion.launch
src/robot/dmotion/msg/: ActionCmd.msg  ActionCommand.msg  BodyCommand.msg  GaitType.msg  HeadCommand.msg  MotionInfo.msg  MotionShareData.msg
src/robot/dmotion/scripts/: config_watchdog.py
src/robot/dmotion/src/: BehaviorRecv.cpp  GaitStateManager.cpp  GaitStateManagerNew.cpp  MotionData.cpp  One_D_Filter.cpp  RobotStatus.cpp  VecPos.cpp  dmotion.cpp  main.cpp  motion.cpp  transitHub.cpp
src/robot/dmotion/src/GaitStateLib/: GaitStateBase.cpp  GaitStateCrouch.cpp  GaitStateGoalie.cpp  GaitStateKick.cpp  GaitStateSetupBackDown.cpp  GaitStateSetupFrontDown.cpp  GaitStateStandup.cpp  GaitStateWenxi.cpp
src/robot/dmotion/src/GaitStateSupportLib/: HumanRobot.cpp  HumanRobotInterface.cpp  SplineThree.cpp  comEstimator.cpp  kalman_filter.cpp  onedCtrl.cpp
src/robot/dmotion/src/oldMotion/: ActionCommand.cpp  ActionCommand.hpp  GaitStateManager.cpp  GaitStateManager.hpp  GaitStateType.hpp  MotionAdapter.cpp  MotionAdapter.hpp  MotionConfig.cpp  MotionConfig.hpp  MotionData.cpp  MotionShareData.hpp  One_D_Filter.cpp  RobotStatus.cpp  RobotStatus.hpp  VecPos.cpp  main.cpp  motion.cpp  transitHub.cpp
src/robot/dmotion/srv/: GetDelta.srv
src/robot/dvision/: CMakeLists.txt  HowToCalibrate.md  package.xml
src/robot/dvision/cmake_modules/: FindEigen3.cmake
src/robot/dvision/include/dvision/: ball_detector.hpp  ball_tracker.hpp  camera.hpp  cameraSettings.hpp  camera_dummy.hpp  circle_detector.hpp  distortionModel.hpp  dvision.hpp  field_detector.hpp  frame.hpp  goal_detector.hpp  idetector.hpp  ipm.hpp  kalman.hpp  line_detector.hpp  line_segment.hpp  localization.hpp  math.hpp  parameters.hpp  projection.hpp  projectionModel.hpp  utils.hpp
src/robot/dvision/launch/: dvision.launch  test_ball_detector.launch  test_cameraDummy.launch  test_distortionModel.launch  test_localization.launch  test_projection.launch
src/robot/dvision/matlab/: bot4.txt  bot6.txt  calc_error.m  calc_extrinsic.m  calc_xy.m  dtranslate.m  errorfunc.m  main.m  projection.m  rotateX.m  rotateY.m  rotateZ.m  test.m  transform.m
src/robot/dvision/msg/: Line.msg  SaveImg.msg  VisionInfo.msg  VisionShareData.msg
src/robot/dvision/src/: dvision.cpp  frame.cpp  main.cpp  parameters.cpp
src/robot/dvision/src/camera/: calibration.cpp  camera.cpp  camera_dummy.cpp  distortionModel.cpp  ipm.cpp  offical-calibration.cpp  projection.cpp
src/robot/dvision/test/: test_ball_detector.cpp  test_cameraDummy.cpp  test_distortionModel.cpp  test_frame.cpp  test_frameRecv.cpp  test_frameSend.cpp  test_ipm.cpp  test_localization.cpp  test_projection.cpp  test_undist.cpp  test_videowriter.cpp
src/robot/dvisualize/: CMakeLists.txt  package.xml
src/robot/dvisualize/launch/: dvisualize.launch
src/robot/dvisualize/src/: clabel.cpp  clabel.hpp  main.cpp  main.qml  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  mymodel.cpp  mymodel.hpp  qml.qrc  undist.cpp  undist.hpp
src/robot/motion/dmotion/: CMakeLists.txt  package.xml
(+223 files in other folders)
