<?xml version="1.0"?>
<package>
  <name>dmonitor</name>
  <version>0.0.0</version>
  <description>The dmonitor package</description>
  <maintainer email="mwx@todo.todo">mwx</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>dvision</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>dvision</run_depend>
</package>
