<?xml version="1.0"?>
<package>
  <name>dbehavior</name>
  <version>0.0.0</version>
  <description>behavior framework</description>
  <maintainer email="mwx36mwx@gmail.com">Wenxing Mei</maintainer>
  <author email="mwx36mwx@gmail.com">Wenxing Mei</author>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
