<?xml version="1.0"?>
<package>
  <name>darknetcxx</name>
  <version>1.0.0</version>
  <description>C++ versio of Darknet</description>
  <maintainer email="xxdsox@gamil.com">Yusu Pan</maintainer>
  <license>TODO</license>
  <author email="xxdsox@gamil.com">Yusu Pan</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
</package>
