<?xml version="1.0"?>
<package>
  <name>dmotion</name>
  <version>0.0.0</version>
  <description>motion framework</description>
  <maintainer email="mwx36mwx@gmail.com">Wenxing Mei</maintainer>
  <author email="mwx36mwx@gmail.com">Wenxing Mei</author>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dprocess</build_depend>
  <run_depend>dprocess</run_depend>
</package>
